The hexagonal board with correct spacing has been done with more css and much less javascript; easier to read

--- a/hexagons.css
+++ b/hexagons.css
@@ -4,25 +4,8 @@
     --height: calc(5*2);
     --width: calc(var(--root3)*var(--side_length));
 
-    height: 75%;
-    width: 75%;
     display: grid;
     grid-template-rows: repeat(21, minmax(20px, 20px));
     grid-template-columns: repeat(21, minmax(18px, 18px));
-    gap: 1px;
-    justify-content: stretch;
-}
-
-.hex_top{
-    --side_length: 5;
-    --root3: 1.73205;
-    --height: calc(5*2);
-    --width: calc(var(--root3)*var(--side_length));
-
-    width: 5;
-    height: 5;
-    background-color: black;
-    border-bottom: var(--side_length)-calc(var(--side_length)/2.0)px solid black;
-    border-left: calc(var(--width/2.0))px solid transparent;
-    border-right: calc(var(--width/2.0))px solid transparent;
+    column-gap: 2px;
 }
